After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703095 - Fixes height < 0 issues.
Fixes height < 0 issues.
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
unspecified
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-06-26 05:13 UTC by Alban Browaeys
Modified: 2013-07-03 14:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes height lower than 0 issues. (1.59 KB, patch)
2013-06-26 05:13 UTC, Alban Browaeys
reviewed Details | Review
main: Fixes height < 0 warnings (1.98 KB, patch)
2013-07-03 14:46 UTC, Bastien Nocera
committed Details | Review

Description Alban Browaeys 2013-06-26 05:13:42 UTC
Created attachment 247791 [details] [review]
Fixes height lower than 0 issues.

Show/realizes the totem window after the video widget (and removes
the realize of the bvw widget).

This is against git.
Comment 1 Bastien Nocera 2013-06-26 11:55:27 UTC
Review of attachment 247791 [details] [review]:

That's really not what we want to do. I don't see the 0 size problem (we have a minimum size for the widgets), and we realize the video widget after the main window has shown on purpose, as it can take time for the video widget to be fully ready (gstreamer init). What problem are you trying to solve?
Comment 2 Bastien Nocera 2013-07-03 14:46:38 UTC
Created attachment 248318 [details] [review]
main: Fixes height < 0 warnings

Show/realizes the main window after the video widget (and removes
the realize of the bvw widget).

Totem used to show the main window, minus the video widget, and then
show the video widget so that any initialisation by the video widget
(like registering plugins) would be done with the window visible.

That's not the case anymore, so we might as well work around those
problems by realizing the video widget in a big enough placeholder.
Comment 3 Bastien Nocera 2013-07-03 14:47:21 UTC
Pushed with an updated commit message.

Attachment 248318 [details] pushed as 7341be8 - main: Fixes height < 0 warnings